# la_figures

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  getting-started.md  index.md  interop.md  overview.md  recipes.md  specs.md
docs/notebooks/: 01_stack_of_matrices.ipynb  02_gaussian_elimination.ipynb  03_qr.ipynb  04_eigenproblems.ipynb  05_algorithms_overview.ipynb  06_julia_interop.ipynb  README.md
la_figures/: __init__.py  _sympy_utils.py  backsub.py  convenience.py  convenience_ge.py  convenience_qr.py  convenience_utils.py  eig.py  formatting.py  ge.py  ge_convenience.py  gram_schmidt.py  qr.py  svd.py
tests/: conftest.py  test_backsub_trace.py  test_characterization_eigproblem_tex.py  test_characterization_qr_tex.py  test_eig_decorators.py  test_eig_spec.py  test_eig_svd_spec.py  test_formatting.py  test_ge.py  test_ge_decorate.py  test_ge_legacy_wrapper.py  test_ge_tbl_bundle_submatrix_spans.py  test_ge_tbl_parity.py  test_ge_tbl_parity_legacy.py  test_ge_tbl_spec_smoke.py  test_ge_tbl_svg_render.py  test_ge_tbl_tex_smoke.py  test_ge_trace.py  test_julia_bridge_inputs.py  test_qr_rank_deficient.py  test_qr_tbl_parity_legacy.py  test_qr_tbl_svg_render.py  test_svd_convenience.py  test_svd_spec.py
