[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "la_figures"
version = "0.0.0"
description = "Linear algebra algorithms and description objects for matrixlayout figures"
requires-python = ">=3.9"
dependencies = [
  "sympy>=1.10",
  "numpy>=1.21",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
